[gd_scene load_steps=6 format=3 uid="uid://cbfvpp3glxxrf"]

[ext_resource type="Texture2D" uid="uid://5s1qaxknbe1f" path="res://Assets Space Invades/Ufo/Ufo.png" id="1_8i7gy"]
[ext_resource type="Script" path="res://Cenas/ufo.gd" id="1_obm8p"]
[ext_resource type="Script" path="res://Cenas/UfoShooting.gd" id="3_0srda"]
[ext_resource type="Script" path="res://Cenas/SpawnTimer.gd" id="4_s5v3s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s8tu5"]
radius = 2.25
height = 16.0

[node name="Ufo" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 64
collision_mask = 130
script = ExtResource("1_obm8p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_8i7gy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s8tu5")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="UfoShooting" type="Node2D" parent="."]
script = ExtResource("3_0srda")

[node name="SpawnTimer" type="Timer" parent="UfoShooting"]
script = ExtResource("4_s5v3s")
min_timer = 1
max_timer = 3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="UfoShooting/SpawnTimer" to="UfoShooting" method="_on_spawn_timer_timeout"]
